<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenRSS</string>
    <string name="git_url"
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="TypographyDashes">
        https://github.com/nmiodice/OpenRSS--an-Android-RSS-client</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="empty_string">No content</string>
    <string name="action_reload">Reload</string>
    <string name="null_string"></string>
        
    <!-- NavDrawer text -->
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="navmenuitem_icon">List item icon</string>
    <string name="drawer_rss_section">Rss</string>
    <string name="drawer_general_section">General</string>
    <string name="drawer_about">About</string>
    <string name="drawer_github">Contribute on GitHub</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_exit">Exit</string>
       
    <!-- ID strings & generic identifiers -->
    <string name="scroll_position">SCROLL_POSITION</string>
    <string name="url_list">URL_LIST</string>
    <string name="last_data_pull">LAST_DATA_PULL</string>
    <string name="author">author</string>
    <string name="description">description</string>
    <string name="title">title</string>
    <string name="publishedDate">publishedDate</string>
    <string name="url">url</string>
    <string name="rss_update_async_task">RSS_UPDATE_IS_CANCELED</string>
    <string name="no_selections">Nothing selected</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_installed_app">No application can handle this request&#8230;</string>
    
    
    <!-- Connectivity -->
    <string name="connection_failed">Connection failed&#8230;</string>
    <string name="web_query_failed">Failed to load data for feed: </string>
    
    <!-- Feed Activity -->
    <string name="action_load_selected">Load</string>
    <string name="action_select_all">Select all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="action_remove_selected">Remove</string>
    <string name="action_save_group">Save as group</string>
    <string name="all">All</string>
    <string name="action_test_re_initialize">reload init data TMP!</string>
    <string name="categories">Categories</string>
    
    
    
    <!-- Add new feed -->
    <string name="action_add">Add new RSS feed</string>
    <string name="add_feed_url">Link</string>
    <string name="add_feed_name">Name</string>
    <string name="add_feed_title">Add a new feed</string>
    <string name="add_feed_message">Enter feed details</string>
    <string name="groups">More groups</string>
    <string name="add_feed_fail_message">Could not save RSS feed. Did you supply a name and link?</string>
    <string name="add_feed_new_category">New group</string>
    
    <!-- Add new feed grouping -->
    <string name="add_new_category">Groups</string>
    <string name="add_feed_grouping_title">Add feeds to group</string>
    <string name="add_feed_grouping_message">Select groups and/or enter new groups</string>
    
    <!-- Delete feeds -->
    <string name="delete_title">You can\'t undo this. Continue?</string>
    
    <!-- RSS -->
    <string name="title_activity_rss">RSS Feed</string>
    <string name="rss_feed_header">RSS Feed Viewer</string>
    <string name="rss_button_fetch">Update RSS Feed</string>
    <string name="button_getrss">Get RSS!</string>
    <string name="loading_content">Loading new content&#8230;</string>
    <string name="no_results">No articles found. Connection may have failed&#8230;</string>
    <string name="partial_results">Some feeds failed to load&#8230;</string>
    <string name="rss_author_by">Article by</string>
    <string name="action_mark_all_as_read">Mark as read</string>
    <string name="confirm_mark_as_read">Mark as read?</string>
    <string name="confirm_mark_as_unread">Mark as unread?</string>
    <string name="action_show_read_articles">Show read &amp; unread</string>
    <string name="action_hide_read_articles">Show unread only</string>
    <string name="action_share_selected">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="article_share_subject">Articles sent from my mobile RSS reader</string>
    <string name="action_article_search_hint">Search&#8230;</string>
    <string name="action_article_search">Search articles</string>
    <string name="action_clear_search_term">Clear search term</string>
    <string name="action_save_search_term">Save search term</string>
	<string name="saved_search_already_exists">Search topic already saved</string>
    <string name="saved_search_success">Search was saved successfully</string>
    <string name="saved_search_is_empty">Cannot save an empty search</string>
    <string name="tile_font_heavy">fonts/RobotoSlab-Regular.ttf</string>
    <string name="tile_font_light">fonts/RobotoSlab-Light.ttf</string>
    <string name="and_x_more">and %1$d more</string>
    <string name="item_deleted">Deleted RSS feed</string>
    <string name="tap_to_undo">Tap to undo</string>
    
    <!-- Topics activity -->
    <string name="saved_searches">Saved searches</string>
    <string name="cannot_delete_all">This search cannot be deleted</string>
    
    <!-- User preferences -->
	<string name="prefs">User preferences</string>
	<string name="prefs_first_run">First time running application</string>
    <string name="prefs_update_in_background">Refresh in background</string>
    <string name="prefs_articles_to_load_setting_text">Loading %1$d articles at most</string>
    <string name="prefs_hide_articles_after_click">Hide read articles</string>
    
    <string name="prefs_update_frequency">Refresh interval</string>
    <string name="prefs_default_update_frequency">4</string>
    
    <string name="prefs_articles_to_load">Max articles to load</string>
    <string name="prefs_default_articles_to_load">500</string>
    <string name="prefs_update_frequency_setting_text">Updating every %1$d hours</string>
    <string name="prefs_enable_animation">Enable animations</string>

    <string name="prefs_days_to_keep_articles">Days to keep</string>
    <string name="prefs_default_days_to_keep_articles">10</string>
    <string name="prefs_days_to_keep_articles_text">Deleting articles older than %1$d days</string>
    
    
    <!-- Preference display categories -->
	<string name="prefs_network_settings">Network</string>
    <string name="prefs_article_settings">Articles</string>
    
    <!-- License filepaths -->
    <string name="license_jsoup">licenses/Jsoup.txt</string>
    <string name="license_android_swipe_list_view">licenses/android-swipelistview.txt</string>
    <string name="license_rome_jdom">licenses/AndroidRome_and_jDOM.txt</string>
    <string name="license_roboto_slab">licenses/RobotoSlab.txt</string>
    
    
</resources>
