<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >    
    <item
        android:id="@+id/action_article_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_article_search"
        android:showAsAction="always"
        />
    
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_reload"
        android:showAsAction="always"
        />
    
    <item
        android:id="@+id/action_view_read"
        android:title="@string/action_show_read_articles"
        android:showAsAction="never"
        />
    
   <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/drawer_settings"/>
    
        
 
</menu>
