<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_mark_as_read"
        android:icon="@drawable/ic_action_read"
        android:title="@string/action_mark_all_as_read"
        android:showAsAction="always"
        />
    
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/action_load_selected"
        android:showAsAction="always"
        />

    <item
        android:id="@+id/action_share_selected"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share_selected"
        android:showAsAction="always"
        />
    	
	<item
        android:id="@+id/action_deselect_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_deselect_all"
        />


</menu>
