<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
   <item
        android:id="@+id/action_remove_selected"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_remove_selected"
        android:showAsAction="always"
        />
    
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/action_load_selected"
        android:showAsAction="always"
        />
 
    <item
        android:id="@+id/action_load_selected"
        android:icon="@drawable/ic_action_web_site"
        android:title="@string/action_load_selected"
        android:showAsAction="always"
        />
    
    
	<item
        android:id="@+id/action_save_group"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save_group"
        android:showAsAction="ifRoom"
        />
	
	<item
        android:id="@+id/action_deselect_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_deselect_all"/>


</menu>
