<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   	android:id="@+id/drawer_layout"
   	android:layout_width="match_parent"
   	android:layout_height="match_parent"
   	>

	<FrameLayout
		android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		>
	    
	    <!-- The nexted relative layouts prevents the views from overlapping. FrameLayout
	    	 will cause this to occur. TODO: find a clenaer way to implement this. One
	    	 that does not include nested RelativeLayouts, and may allow the scroll bar
	    	 to slide off the screen when the user scrolls! -->
	    <RelativeLayout
	        tools:ignore="UselessParent"
	        style="@style/ActivityBase"
	        >
			<RelativeLayout
			    style="@style/rssTile"
			    android:id="@+id/article_search_box_container"
			    android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:visibility="gone"
	        	android:padding="8dp"
	        	android:layout_margin="10dp"
	        	android:background="@color/article_search_background"
			    >
	        
				<ImageView
				    android:id="@+id/action_clear_search_term"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/ic_action_remove"
		            android:contentDescription="@string/action_clear_search_term" 
		            android:layout_alignParentRight="true"
		            android:layout_centerInParent="true"
		            android:paddingLeft="8dp"
		            android:onClick="clearSearchText"
		            />
		        
		        <EditText
					style="@style/Header"
					android:id="@+id/article_search_box_text"
		        	android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:hint="@string/action_article_search_hint"
		        	android:layout_toLeftOf="@id/action_clear_search_term"
		        	
					android:textSize="18sp"
					android:text="@string/null_string"
		        	android:textColor="@color/white"
		        	android:textColorHint="@color/white_opaque"
		        	android:inputType="text"
		        	/>
	        </RelativeLayout>
	        
			<LinearLayout
			    android:id="@+id/rss_fragment_container"
			    android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_below="@id/article_search_box_container"
				android:orientation="vertical" 
				/>
	        
	    </RelativeLayout>
	        
	

	        
    </FrameLayout>

    <ListView
       android:id="@+id/left_drawer"
       android:layout_width="240dp"
       android:layout_height="match_parent"
       android:layout_gravity="start"
       android:background="@color/white"
       android:choiceMode="singleChoice"
       android:divider="@android:color/darker_gray"
       android:dividerHeight="0.1dp" 
       android:listSelector="@drawable/navdrawer_listselector"/>

</android.support.v4.widget.DrawerLayout>
